Alterações  e criação do formulario de pessoais, inicio da troca dos inputs para material angular, com floatings labels

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
 </head>
-<body style=" height: 100%">
-  <app-root></app-root>
+<body class = "" style=" max-height: 100%">
+  <app-root ></app-root>
 </body>
 </html>
